--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,20 @@
 # Compression
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/html text/plain text/css application/javascript application/json
+</IfModule>
+
+# Add Vary header for proper caching
+<IfModule mod_headers.c>
+    # Cache for 1 year
+    <FilesMatch "\.(webp|png|ico)$">
+        Header set Cache-Control "max-age=31536000, public"
+    </FilesMatch>
+    
+    # Cache CSS/JS for 1 week
+    <FilesMatch "\.(css|js)$">
+        Header set Cache-Control "max-age=604800, public"
+    </FilesMatch>
+    
+    # Add Vary header
+    Header append Vary: Accept-Encoding
 </IfModule> 
