--- a/.htaccess
+++ b/.htaccess
@@ -45,3 +45,10 @@
 # Add custom error page
 ErrorDocument 404 /404.html 
 
+# Add to your .htaccess file
+<FilesMatch "\.(css|js)$">
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires 0
+</FilesMatch>
+
